# rosidl_typesupport_microxrcedds

./: .gitignore  CMakeLists.txt  README.md  package.xml  rosidl_typesupport_micrortps_c-extras.cmake.in
.github/workflows/: ci.yml
cmake/: rosidl_typesupport_micrortps_c_generate_interfaces.cmake
include/rosidl_typesupport_micrortps_c/: identifier.h  message_type_support.h
micrortps_cmake_module/: CMakeLists.txt  micrortps_client_cmake_module-extras.cmake  package.xml
micrortps_cmake_module/cmake/Modules/: FindMicroRTPS_Client.cmake
microxrcedds_cmake_module/: CMakeLists.txt  package.xml
microxrcedds_cmake_module/cmake/Modules/: FindMicroXRCEDDS.cmake
resource/: msg__rosidl_typesupport_micrortps_c.h.em  msg__type_support_c.cpp.em  srv__rosidl_typesupport_micrortps_c.h.em  srv__type_support_c.cpp.em
rosidl_typesupport_micrortps_c/: CMakeLists.txt  __init__.py  package.xml  rosidl_typesupport_micrortps_c-extras.cmake.in
rosidl_typesupport_micrortps_c/cmake/: rosidl_typesupport_micrortps_c_generate_interfaces.cmake
rosidl_typesupport_micrortps_c/include/rosidl_typesupport_micrortps_c/: deserialize_buffer_utility.h  identifier.h  message_type_support.h  service_type_support.h  visibility_control.h
rosidl_typesupport_micrortps_c/resource/: msg__rosidl_typesupport_micrortps_c.h (Original).em  msg__rosidl_typesupport_micrortps_c.h.em  msg__type_support_c.c.em  msg__type_support_c.cpp (Original).em  rosidl_typesupport_micrortps_c__visibility_control.h.in  srv__rosidl_typesupport_micrortps_c.h.em  srv__type_support_c.c.em
rosidl_typesupport_micrortps_c/rosidl_typesupport_micrortps_c/: __init__.py
rosidl_typesupport_micrortps_c/src/: deserialize_buffer_utility.c  identifier.c
rosidl_typesupport_microxrcedds_c/: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  PLATFORM_SUPPORT.md  QUALITY.md  VERSIONING.md  package.xml  rosidl_typesupport_microxrcedds_c-extras.cmake.in
rosidl_typesupport_microxrcedds_c/cmake/: rosidl_typesupport_microxrcedds_c_generate_interfaces.cmake
rosidl_typesupport_microxrcedds_c/include/rosidl_typesupport_microxrcedds_c/: deserialize_buffer_utility.h  identifier.h  message_type_support.h  service_type_support.h  visibility_control.h
rosidl_typesupport_microxrcedds_c/resource/: idl__rosidl_typesupport_microxrcedds_c.h.em  idl__type_support_c.c.em  msg__rosidl_typesupport_microxrcedds_c.h.em  msg__type_support_c.c.em  rosidl_typesupport_microxrcedds_c__visibility_control.h.in  srv__rosidl_typesupport_microxrcedds_c.h.em  srv__type_support_c.c.em
rosidl_typesupport_microxrcedds_c/rosidl_typesupport_microxrcedds_c/: __init__.py
rosidl_typesupport_microxrcedds_c/src/: deserialize_buffer_utility.c  identifier.c
rosidl_typesupport_microxrcedds_c/test/: CMakeLists.txt  test_typpesupport.cpp
rosidl_typesupport_microxrcedds_c_tests/: CMakeLists.txt  package.xml
rosidl_typesupport_microxrcedds_c_tests/msg/: TestMsg2.msg
rosidl_typesupport_microxrcedds_c_tests/src/: test_typpesupport.cpp
rosidl_typesupport_microxrcedds_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosidl_typesupport_microxrcedds_cpp-extras.cmake.in
rosidl_typesupport_microxrcedds_cpp/cmake/: rosidl_typesupport_microxrcedds_cpp_generate_interfaces.cmake
rosidl_typesupport_microxrcedds_cpp/include/rosidl_typesupport_microxrcedds_cpp/: identifier.hpp  message_type_support.h  message_type_support_decl.hpp  service_type_support.h  service_type_support_decl.hpp  visibility_control.h
rosidl_typesupport_microxrcedds_cpp/resource/: idl__rosidl_typesupport_microxrcedds_cpp.hpp.em  idl__type_support_cpp.cpp.em  msg__rosidl_typesupport_microxrcedds_cpp.hpp.em  msg__type_support_cpp.cpp.em  rosidl_typesupport_microxrcedds_cpp__visibility_control.h.in  srv__rosidl_typesupport_microxrcedds_cpp.hpp.em  srv__type_support_cpp.cpp.em
rosidl_typesupport_microxrcedds_cpp/rosidl_typesupport_microxrcedds_cpp/: __init__.py
rosidl_typesupport_microxrcedds_cpp/src/: deserialize_buffer_utility.cpp  identifier.cpp
rosidl_typesupport_microxrcedds_cpp_tests/: CMakeLists.txt  package.xml
rosidl_typesupport_microxrcedds_cpp_tests/src/: test_typpesupport.cpp
rosidl_typesupport_microxrcedds_shared/: CMakeLists.txt  package.xml
rosidl_typesupport_microxrcedds_shared/include/rosidl_typesupport_microxrcedds_shared/: identifier.h  message_type_support.h  service_type_support.h
rosidl_typesupport_microxrcedds_test_msg/: CMakeLists.txt  package.xml
rosidl_typesupport_microxrcedds_test_msg/msg/: Primitive.msg
src/: identifier.c
test/c/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/c/src/: cross_serialization_tests copy.cpp  cross_serialization_tests.cpp  test_typesupport.cpp
test/cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/cpp/src/: test_typesupport.cpp
test/msg/: CHANGELOG.rst  CMakeLists.txt  package.xml
test/msg/msg/: Array.msg  Compound.msg  Primitive.msg  Sequence.msg
