<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_microxrcedds_shared</name>
  <version>0.0.1</version>
  <description>Shared files between C and C++ types supports.</description>
  <maintainer email="borjaouterelo@eprosima.com">Borja Outerelo</maintainer>
  <license>Apache License 2.0</license>
  <author>Borja Outerelo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <buildtool_depend>microcdr</buildtool_depend>
  <buildtool_depend>microxrcedds_client</buildtool_depend>
  <buildtool_depend>microxrcedds_cmake_module</buildtool_depend>

  <buildtool_export_depend>microcdr</buildtool_export_depend>
  <buildtool_export_depend>microxrcedds_client</buildtool_export_depend>
  <buildtool_export_depend>microxrcedds_cmake_module</buildtool_export_depend>

  <build_export_depend>rmw</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
